# stardust

./: Cargo.toml
docs/: CSP_OPTIMIZATION_GUIDE.md  FRONTEND_DEEP_EVALUATION_V2.md  FRONTEND_EVALUATION_EXECUTIVE_SUMMARY.md  FRONTEND_MISSING_COMPONENTS_ANALYSIS.md  MATCHMAKING_LIMITS_AND_COMPLETENESS_ANALYSIS.md  P0_SECURITY_FIXES_COMPLETE.md  PALLET_MEMBERSHIP_RENAME_GUIDE.md
frontend/: package.json  tsconfig.json
frontend/.kiro/specs/privacy-nft-system/: design.md  requirements.md  tasks.md
frontend/app/: _layout.tsx  checkin.tsx  debug.tsx
frontend/app/(tabs)/: index.tsx  profile.tsx
frontend/app/arbitration/: [id].tsx  create.tsx  index.tsx
frontend/app/bridge/: [swapId].tsx  history.tsx  maker.tsx
frontend/app/divination/: bazi-detail.tsx  history.tsx
frontend/app/diviner/: [providerId].tsx  dashboard.tsx  earnings.tsx  index.tsx  register.tsx  reviews.tsx
frontend/app/diviner/orders/: [id].tsx  index.tsx
frontend/app/maker/: dashboard.tsx  settings.tsx
frontend/app/maker/apply/: deposit.tsx  info.tsx  pending.tsx
frontend/app/maker/deposit/: index.tsx  replenish.tsx
frontend/app/maker/penalties/: index.tsx
frontend/app/market/: privacy-settings.tsx  search.tsx
frontend/app/market/order/: [id].tsx  list.tsx
frontend/app/market/provider/: register.tsx
frontend/app/market/review/: create.tsx
frontend/app/matchmaking/: create-profile.tsx  discover.tsx  index.tsx  likes.tsx  matches.tsx  membership.tsx  preferences.tsx  requests.tsx  settings.tsx  viewers.tsx
frontend/app/profile/: edit.tsx
frontend/app/storage/: fund.tsx  index.tsx
frontend/app/wallet/: transactions.tsx  transfer.tsx
frontend/app/wallet/buy-dust/: first-purchase.tsx  index.tsx  order.tsx
frontend/docs/: FIXES_SUMMARY.md  FRONTEND_EVALUATION_V2.md  FRONTEND_EVALUATION_V3.md  MAKER_OPTIMIZATION_COMPLETE.md  MEMORY_LEAK_FIX.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_SESSION_SUMMARY.md  PROMISE_STYLE_GUIDE.md  QUICK_OPTIMIZATION_GUIDE.md  SECURITY_FIX_WEB_KEYSTORE.md  TESTING_GUIDE.md  TODO_TRACKER.md
frontend/public/: index.html
frontend/scripts/: batch-optimize.md  csp-server-middleware.js  inject-csp-nonce.js
frontend/src/components/: ErrorBoundary.tsx  OrderList.tsx  QRCode.tsx  TransactionConfirmDialog.tsx  TransactionStatusDialog.tsx  UnlockWalletDialog.tsx  VirtualizedList.tsx
frontend/src/components/common/: Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  LoadingSpinner.tsx  index.ts
frontend/src/components/divination/: DivinationTemplate.tsx
frontend/src/divination/bazi/: README.md
frontend/src/hooks/: index.ts  useAsync.ts  useClipboard.ts  useDebounce.ts  useErrorHandler.ts  useModal.ts  usePaginatedList.ts  useWallet.ts
frontend/src/lib/: error-handler.ts  errors.ts  index.ts  keystore.web.ts  logger.ts  secure-storage-indexeddb.ts  secure-storage.web.ts  secureStore.ts  signer.native.ts  storage.ts
frontend/src/services/: arbitration.service.ts  bridge.service.ts  chat.service.ts  contacts.service.ts  divination-market.service.ts  divination.service.ts  error-reporting.service.ts  evidence.service.ts  index.ts  ipfs-storage.service.ts  ipfs.service.ts  matchmaking.service.ts  secure-storage.service.ts  storage-adapter.ts  trading.service.ts  transaction-security.service.ts
frontend/src/stores/: index.ts  trading.store.ts  user.store.ts  wallet.store.ts
frontend/src/types/: index.ts  substrate.types.ts  type-guards.ts
pallets/affiliate/: Cargo.toml  README.md
pallets/affiliate/src/: benchmarking.rs  distribute.rs  escrow.rs  governance.rs  instant.rs  lib.rs  mock.rs  tests.rs  types.rs  weekly.rs  weights.rs
pallets/arbitration/: Cargo.toml
pallets/arbitration/src/: lib.rs
pallets/chat/core/: Cargo.toml
pallets/chat/core/src/: benchmarking.rs  lib.rs  weights.rs
pallets/chat/group/: Cargo.toml
pallets/chat/group/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/chat/livestream/: Cargo.toml
pallets/chat/livestream/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/divination/ai/: Cargo.toml
pallets/divination/ai/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/divination/market/: Cargo.toml  README.md
pallets/divination/membership/: Cargo.toml  README.md
pallets/divination/membership/src/: benchmarking.rs  lib.rs  mock.rs
pallets/divination/nft/: Cargo.toml
pallets/divination/nft/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/divination/ocw-tee/: Cargo.toml
pallets/divination/ocw-tee/src/: benchmarking.rs  lib.rs  weights.rs
pallets/escrow/src/: benchmarking.rs  lib.rs  weights.rs
pallets/evidence/: Cargo.toml
pallets/evidence/src/: lib.rs
pallets/matchmaking/: README.md
pallets/matchmaking/common/: Cargo.toml
pallets/matchmaking/common/src/: lib.rs  traits.rs  types.rs
pallets/matchmaking/docs/: NFT_INTEGRATION_ANALYSIS.md  chat-integration.md
pallets/matchmaking/interaction/: Cargo.toml
pallets/matchmaking/matching/: Cargo.toml
pallets/matchmaking/matching/src/: bazi.rs  benchmarking.rs  lib.rs  personality.rs  tests.rs  weights.rs
pallets/matchmaking/membership/: Cargo.toml  README.md
pallets/matchmaking/profile/: Cargo.toml
pallets/matchmaking/profile/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
pallets/matchmaking/recommendation/: Cargo.toml
pallets/matchmaking/recommendation/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
pallets/storage-lifecycle/src/: lib.rs
pallets/storage-service/: Cargo.toml  README.md
pallets/storage-service/src/: benchmarking.rs  lib.rs  runtime_api.rs  tests.rs  types.rs  weights.rs
pallets/trading/credit/: Cargo.toml
pallets/trading/credit/src/: benchmarking.rs  lib.rs  weights.rs
pallets/trading/maker/: Cargo.toml
pallets/trading/maker/src/: lib.rs
pallets/trading/otc/: Cargo.toml
pallets/trading/otc/src/: benchmarking.rs  lib.rs
pallets/trading/swap/: Cargo.toml
pallets/trading/swap/src/: benchmarking.rs  lib.rs  ocw.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
(+92 files in other folders)
