[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-solochain-template.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/divination/common",
    "pallets/divination/privacy",
    "pallets/divination/almanac",
    "pallets/divination/ai",
    "pallets/divination/market",
    "pallets/divination/nft",
    "pallets/divination/meihua",
    "pallets/divination/bazi",
    "pallets/divination/liuyao",
    "pallets/divination/qimen",
    "pallets/divination/ziwei",
    "pallets/divination/xiaoliuren",
    "pallets/divination/daliuren",
    "pallets/divination/tarot",
    "pallets/divination/membership",
    "pallets/divination/tee-privacy",
    "pallets/divination/ocw-tee",
    "pallets/affiliate",
    "pallets/chat/common",
    "pallets/chat/permission",
    "pallets/chat/core",
    "pallets/chat/group",
    "pallets/chat/contacts",
    "pallets/chat/livestream",
    "pallets/trading/common",
    "pallets/trading/pricing",
    "pallets/trading/credit",
    "pallets/trading/maker",
    "pallets/trading/swap",
    "pallets/trading/otc",
    "pallets/escrow",
    "pallets/referral",
    "pallets/storage-service",
    "pallets/evidence",
    "pallets/arbitration",
    "pallets/storage-lifecycle",
    "pallets/matchmaking/common",
    "pallets/matchmaking/profile",
    "pallets/matchmaking/matching",
    "pallets/matchmaking/recommendation",
    "pallets/matchmaking/interaction",
    "pallets/matchmaking/membership",
    "media-utils",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
solochain-template-runtime = { path = "./runtime", default-features = false }
# Divination pallets
pallet-divination-common = { path = "./pallets/divination/common", default-features = false }
pallet-divination-privacy = { path = "./pallets/divination/privacy", default-features = false }
pallet-affiliate = { path = "./pallets/affiliate", default-features = false }
pallet-almanac = { path = "./pallets/divination/almanac", default-features = false }
pallet-divination-ai = { path = "./pallets/divination/ai", default-features = false }
pallet-divination-market = { path = "./pallets/divination/market", default-features = false }
pallet-divination-nft = { path = "./pallets/divination/nft", default-features = false }
pallet-meihua = { path = "./pallets/divination/meihua", default-features = false }
pallet-bazi-chart = { path = "./pallets/divination/bazi", default-features = false }
pallet-liuyao = { path = "./pallets/divination/liuyao", default-features = false }
pallet-qimen = { path = "./pallets/divination/qimen", default-features = false }
pallet-ziwei = { path = "./pallets/divination/ziwei", default-features = false }
pallet-xiaoliuren = { path = "./pallets/divination/xiaoliuren", default-features = false }
pallet-daliuren = { path = "./pallets/divination/daliuren", default-features = false }
pallet-tarot = { path = "./pallets/divination/tarot", default-features = false }
pallet-divination-membership = { path = "./pallets/divination/membership", default-features = false }
pallet-tee-privacy = { path = "./pallets/divination/tee-privacy", default-features = false }
pallet-divination-ocw-tee = { path = "./pallets/divination/ocw-tee", default-features = false }
# Chat pallets
pallet-chat-common = { path = "./pallets/chat/common", default-features = false }
pallet-chat-permission = { path = "./pallets/chat/permission", default-features = false }
pallet-chat-core = { path = "./pallets/chat/core", default-features = false }
pallet-chat-group = { path = "./pallets/chat/group", default-features = false }
pallet-contacts = { path = "./pallets/chat/contacts", default-features = false }
pallet-livestream = { path = "./pallets/chat/livestream", default-features = false }
# Trading pallets
pallet-trading-common = { path = "./pallets/trading/common", default-features = false }
pallet-trading-pricing = { path = "./pallets/trading/pricing", default-features = false }
pallet-trading-credit = { path = "./pallets/trading/credit", default-features = false }
pallet-trading-maker = { path = "./pallets/trading/maker", default-features = false }
pallet-trading-swap = { path = "./pallets/trading/swap", default-features = false }
pallet-trading-otc = { path = "./pallets/trading/otc", default-features = false }
# Escrow, Referral, IPFS pallets
pallet-escrow = { path = "./pallets/escrow", default-features = false }
pallet-referral = { path = "./pallets/referral", default-features = false }
pallet-storage-service = { path = "./pallets/storage-service", default-features = false }
# Stardust common libraries
media-utils = { path = "./media-utils", default-features = false }
# Evidence pallet
pallet-evidence = { path = "./pallets/evidence", default-features = false }
# Arbitration pallet
pallet-arbitration = { path = "./pallets/arbitration", default-features = false }
# Storage lifecycle pallet
pallet-storage-lifecycle = { path = "./pallets/storage-lifecycle", default-features = false }
# Matchmaking pallets
pallet-matchmaking-common = { path = "./pallets/matchmaking/common", default-features = false }
pallet-matchmaking-profile = { path = "./pallets/matchmaking/profile", default-features = false }
pallet-matchmaking-matching = { path = "./pallets/matchmaking/matching", default-features = false }
pallet-matchmaking-recommendation = { path = "./pallets/matchmaking/recommendation", default-features = false }
pallet-matchmaking-interaction = { path = "./pallets/matchmaking/interaction", default-features = false }
pallet-matchmaking-membership = { path = "./pallets/matchmaking/membership", default-features = false }
# Additional dependencies
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sp-application-crypto = { version = "44.0.0", default-features = false }
clap = { version = "4.5.13" }
frame-benchmarking-cli = { version = "53.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.13.0", default-features = false }
frame-system = { version = "45.0.0", default-features = false }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
pallet-transaction-payment = { version = "45.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "48.0.0", default-features = false }
sc-basic-authorship = { version = "0.53.0", default-features = false }
sc-cli = { version = "0.57.0", default-features = false }
sc-client-api = { version = "44.0.0", default-features = false }
sc-consensus = { version = "0.54.0", default-features = false }
sc-consensus-aura = { version = "0.55.0", default-features = false }
sc-consensus-grandpa = { version = "0.40.0", default-features = false }
sc-executor = { version = "0.47.0", default-features = false }
sc-network = { version = "0.55.0", default-features = false }
sc-offchain = { version = "50.0.0", default-features = false }
sc-service = { version = "0.56.0", default-features = false }
sc-telemetry = { version = "30.0.0", default-features = false }
sc-transaction-pool = { version = "44.0.0", default-features = false }
sc-transaction-pool-api = { version = "43.0.0", default-features = false }
sp-api = { version = "40.0.0", default-features = false }
sp-block-builder = { version = "40.0.0", default-features = false }
sp-blockchain = { version = "43.0.0", default-features = false }
sp-consensus-aura = { version = "0.46.0", default-features = false }
sp-core = { version = "39.0.0", default-features = false }
sp-genesis-builder = { version = "0.21.0", default-features = false }
sp-inherents = { version = "40.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-keyring = { version = "45.0.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
sp-arithmetic = { version = "28.0.0", default-features = false }
sp-timestamp = { version = "40.0.0", default-features = false }
substrate-frame-rpc-system = { version = "49.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
frame-benchmarking = { version = "45.0.0", default-features = false }
frame-executive = { version = "45.0.0", default-features = false }
frame-support = { version = "45.0.0", default-features = false }
frame-system-benchmarking = { version = "45.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "40.0.0", default-features = false }
frame-try-runtime = { version = "0.51.0", default-features = false }
pallet-aura = { version = "44.0.0", default-features = false }
pallet-balances = { version = "46.0.0", default-features = false }
pallet-grandpa = { version = "45.0.0", default-features = false }
pallet-sudo = { version = "45.0.0", default-features = false }
pallet-collective = { version = "45.0.0", default-features = false }
pallet-collective-membership = { package = "pallet-membership", version = "45.0.0", default-features = false }
pallet-timestamp = { version = "44.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "45.0.0", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
sp-consensus-grandpa = { version = "27.0.0", default-features = false }
sp-offchain = { version = "40.0.0", default-features = false }
sp-session = { version = "42.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-transaction-pool = { version = "40.0.0", default-features = false }
sp-version = { version = "43.0.0", default-features = false }
substrate-wasm-builder = { version = "31.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
log = { version = "0.4.22", default-features = false }
lite-json = { version = "0.2", default-features = false }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

