[package]
name = "solochain-template-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
frame-benchmarking = { version = "45.0.0", optional = true, workspace = true }
frame-executive = { version = "45.0.0", workspace = true }
frame-metadata-hash-extension = { version = "0.13.0", workspace = true }
frame-support = { version = "45.0.0", features = ["experimental"], workspace = true }
frame-system-benchmarking = { version = "45.0.0", optional = true, workspace = true }
frame-system-rpc-runtime-api = { version = "40.0.0", workspace = true }
frame-system = { version = "45.0.0", workspace = true }
frame-try-runtime = { version = "0.51.0", optional = true, workspace = true }
pallet-aura = { version = "44.0.0", workspace = true }
pallet-balances = { version = "46.0.0", workspace = true }
pallet-grandpa = { version = "45.0.0", workspace = true }
pallet-sudo = { version = "45.0.0", workspace = true }
pallet-collective = { version = "45.0.0", workspace = true }
pallet-collective-membership = { workspace = true }
pallet-timestamp = { version = "44.0.0", workspace = true }
pallet-transaction-payment-rpc-runtime-api = { version = "45.0.0", workspace = true }
pallet-transaction-payment = { version = "45.0.0", workspace = true }
# Divination pallets
pallet-divination-common = { workspace = true }
pallet-divination-privacy = { workspace = true }
pallet-affiliate = { workspace = true }
pallet-almanac = { workspace = true }
pallet-divination-ai = { workspace = true }
pallet-divination-market = { workspace = true }
pallet-divination-nft = { workspace = true }
pallet-meihua = { workspace = true }
pallet-bazi-chart = { workspace = true }
pallet-liuyao = { workspace = true }
pallet-qimen = { workspace = true }
pallet-ziwei = { workspace = true }
pallet-xiaoliuren = { workspace = true }
pallet-daliuren = { workspace = true }
pallet-tarot = { workspace = true }
pallet-divination-membership = { workspace = true }
# TEE Privacy pallet
pallet-tee-privacy = { workspace = true }
# Chat pallets
pallet-chat-common = { workspace = true }
pallet-chat-permission = { workspace = true }
pallet-chat-core = { workspace = true }
pallet-chat-group = { workspace = true }
# Livestream pallet
pallet-livestream = { workspace = true }
# Trading pallets
pallet-trading-common = { workspace = true }
pallet-trading-pricing = { workspace = true }
pallet-trading-credit = { workspace = true }
pallet-trading-maker = { workspace = true }
pallet-trading-swap = { workspace = true }
pallet-trading-otc = { workspace = true }
# Escrow, Referral, IPFS pallets
pallet-escrow = { workspace = true }
pallet-referral = { workspace = true }
pallet-storage-service = { workspace = true }
# Evidence pallet
pallet-evidence = { workspace = true }
# Arbitration pallet
pallet-arbitration = { workspace = true }
# Storage lifecycle pallet
pallet-storage-lifecycle = { workspace = true }
# Matchmaking pallets
pallet-matchmaking-membership = { workspace = true }
pallet-matchmaking-profile = { workspace = true }
pallet-matchmaking-common = { workspace = true }
scale-info = { features = ["derive", "serde"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
sp-api = { version = "40.0.0", workspace = true }
sp-block-builder = { version = "40.0.0", workspace = true }
sp-consensus-aura = { version = "0.46.0", features = ["serde"], workspace = true }
sp-consensus-grandpa = { version = "27.0.0", features = ["serde"], workspace = true }
sp-core = { version = "39.0.0", features = ["serde"], workspace = true }
sp-genesis-builder = { version = "0.21.0", workspace = true }
sp-inherents = { version = "40.0.0", workspace = true }
sp-keyring = { version = "45.0.0", workspace = true }
sp-offchain = { version = "40.0.0", workspace = true }
sp-runtime = { version = "45.0.0", features = ["serde"], workspace = true }
sp-session = { version = "42.0.0", workspace = true }
sp-storage = { version = "22.0.0", workspace = true }
sp-transaction-pool = { version = "40.0.0", workspace = true }
sp-version = { version = "43.0.0", features = ["serde"], workspace = true }

[build-dependencies]
substrate-wasm-builder = { version = "31.0.0", optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"hex/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-collective/std",
	"pallet-collective-membership/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	# Divination pallets std
	"pallet-divination-common/std",
	"pallet-divination-privacy/std",
	"pallet-affiliate/std",
	"pallet-almanac/std",
	"pallet-divination-ai/std",
	"pallet-divination-market/std",
	"pallet-divination-nft/std",
	"pallet-meihua/std",
	"pallet-bazi-chart/std",
	"pallet-liuyao/std",
	"pallet-qimen/std",
	"pallet-ziwei/std",
	"pallet-xiaoliuren/std",
	"pallet-daliuren/std",
	"pallet-tarot/std",
	"pallet-divination-membership/std",
	# TEE Privacy pallet std
	"pallet-tee-privacy/std",
	# Chat pallets std
	"pallet-chat-common/std",
	"pallet-chat-permission/std",
	"pallet-chat-core/std",
	"pallet-chat-group/std",
	# Livestream pallet std
	"pallet-livestream/std",
	# Trading pallets std
	"pallet-trading-common/std",
	"pallet-trading-pricing/std",
	"pallet-trading-credit/std",
	"pallet-trading-maker/std",
	"pallet-trading-swap/std",
	"pallet-trading-otc/std",
	# Escrow, Referral, IPFS pallets std
	"pallet-escrow/std",
	"pallet-referral/std",
	"pallet-storage-service/std",
	# Evidence pallet std
	"pallet-evidence/std",
	# Arbitration pallet std
	"pallet-arbitration/std",
	# Storage lifecycle pallet std
	"pallet-storage-lifecycle/std",
	"pallet-matchmaking-membership/std",
	"scale-info/std",
	"serde_json/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-keyring/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-collective-membership/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	# Divination pallets benchmarks
	"pallet-divination-privacy/runtime-benchmarks",
	"pallet-almanac/runtime-benchmarks",
	"pallet-divination-ai/runtime-benchmarks",
	"pallet-divination-market/runtime-benchmarks",
	"pallet-divination-nft/runtime-benchmarks",
	"pallet-meihua/runtime-benchmarks",
	"pallet-bazi-chart/runtime-benchmarks",
	"pallet-liuyao/runtime-benchmarks",
	"pallet-qimen/runtime-benchmarks",
	"pallet-ziwei/runtime-benchmarks",
	"pallet-xiaoliuren/runtime-benchmarks",
	"pallet-daliuren/runtime-benchmarks",
	"pallet-tarot/runtime-benchmarks",
	"pallet-divination-membership/runtime-benchmarks",
	# TEE Privacy pallet benchmarks
	"pallet-tee-privacy/runtime-benchmarks",
	# Chat pallets benchmarks
	"pallet-chat-permission/runtime-benchmarks",
	"pallet-chat-core/runtime-benchmarks",
	"pallet-chat-group/runtime-benchmarks",
	# Livestream pallet benchmarks
	"pallet-livestream/runtime-benchmarks",
	# Trading pallets benchmarks
	"pallet-trading-pricing/runtime-benchmarks",
	"pallet-trading-credit/runtime-benchmarks",
	"pallet-trading-maker/runtime-benchmarks",
	"pallet-trading-swap/runtime-benchmarks",
	"pallet-trading-otc/runtime-benchmarks",
	# Escrow, Referral pallets benchmarks
	"pallet-referral/runtime-benchmarks",
	# Evidence pallet benchmarks
	"pallet-evidence/runtime-benchmarks",
	# Arbitration pallet benchmarks
	"pallet-arbitration/runtime-benchmarks",
	# Matchmaking pallet benchmarks
	"pallet-matchmaking-membership/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-collective-membership/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	# Divination pallets try-runtime
	"pallet-divination-privacy/try-runtime",
	"pallet-almanac/try-runtime",
	"pallet-divination-ai/try-runtime",
	"pallet-divination-market/try-runtime",
	"pallet-divination-nft/try-runtime",
	"pallet-meihua/try-runtime",
	"pallet-bazi-chart/try-runtime",
	"pallet-liuyao/try-runtime",
	"pallet-qimen/try-runtime",
	"pallet-ziwei/try-runtime",
	"pallet-xiaoliuren/try-runtime",
	"pallet-daliuren/try-runtime",
	"pallet-tarot/try-runtime",
	"pallet-divination-membership/try-runtime",
	# TEE Privacy pallet try-runtime
	"pallet-tee-privacy/try-runtime",
	# Chat pallets try-runtime
	"pallet-chat-permission/try-runtime",
	"pallet-chat-core/try-runtime",
	"pallet-chat-group/try-runtime",
	# Livestream pallet try-runtime
	"pallet-livestream/try-runtime",
	# Trading pallets try-runtime
	"pallet-trading-pricing/try-runtime",
	"pallet-trading-credit/try-runtime",
	"pallet-trading-maker/try-runtime",
	"pallet-trading-swap/try-runtime",
	"pallet-trading-otc/try-runtime",
	# Escrow, Referral pallets try-runtime
	"pallet-referral/try-runtime",
	# Evidence pallet try-runtime
	"pallet-evidence/try-runtime",
	# Arbitration pallet try-runtime
	# Note: pallet-arbitration does not have try-runtime feature
	# Matchmaking pallet try-runtime
	"pallet-matchmaking-membership/try-runtime",
	"sp-runtime/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
