[package]
name = "pallet-chat-core"
version = "0.1.0"
authors = ["Stardust Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lao-sha/stardust"
description = "去中心化私聊功能模块 (链上元数据 + IPFS 内容 + ChatUserId)"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
log = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }

# 本地依赖
pallet-chat-common = { path = "../common", default-features = false }
pallet-chat-permission = { path = "../permission", default-features = false }
# 注意：不集成 pallet-storage-service，聊天消息有 180 天过期机制，不适合 PIN

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"log/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"pallet-chat-common/std",
	"pallet-chat-permission/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
