[package]
name = "pallet-divination-ai"
version = "0.1.0"
description = "通用玄学占卜 AI 解读模块 - 支持多种占卜类型的 AI 智能解读"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-divination-common = { path = "../common", default-features = false }
pallet-storage-service = { path = "../../storage-service", default-features = false }
pallet-trading-common = { path = "../../trading/common", default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-timestamp/std",
    "pallet-divination-common/std",
    "pallet-storage-service/std",
    "pallet-trading-common/std",
    "sp-core/std",
    "sp-io/std",
    "pallet-balances/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
