[package]
name = "pallet-divination-membership"
version = "0.1.0"
description = "Membership pallet for divination platform - subscription management, DUST rewards, and member profiles"
authors = ["Stardust Team"]
homepage = "https://stardust.network"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/stardust-network/stardust"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
log = { workspace = true }
# Pricing module for USDT to DUST conversion
pallet-trading-common = { path = "../../trading/common", default-features = false }
# Affiliate module for UserFundingProvider and AffiliateDistributor
pallet-affiliate = { path = "../../affiliate", default-features = false }

[dev-dependencies]
sp-io = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-trading-common/std",
    "pallet-affiliate/std",
    "log/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
