[package]
name = "pallet-divination-nft"
version = "0.1.0"
description = "通用玄学占卜 NFT 模块 - 支持多种占卜类型的 NFT 铸造、交易、收藏"
authors = ["Stardust Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/stardust/stardust"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }

# 玄学公共模块
pallet-divination-common = { path = "../common", default-features = false }
pallet-storage-service = { path = "../../storage-service", default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-divination-common/std",
    "pallet-storage-service/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
