[package]
name = "pallet-divination-ocw-tee"
version = "0.1.0"
description = "OCW + TEE 通用架构模块，为所有占卜模块提供统一的隐私计算基础设施"
authors = ["Stardust Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/stardust/stardust"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
log = { workspace = true }
serde = { workspace = true, optional = true }
hex = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

# Local
pallet-divination-common = { workspace = true }
pallet-tee-privacy = { path = "../tee-privacy", default-features = false }
pallet-storage-service = { path = "../../storage-service", default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "log/std",
    "serde?/std",
    "hex/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "pallet-divination-common/std",
    "pallet-tee-privacy/std",
    "pallet-storage-service/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
