[package]
name = "pallet-matchmaking-common"
version = "0.1.0"
description = "婚恋模块 - 共享类型和工具"
authors = ["Stardust Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/stardust/stardust"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }

# 本地依赖
pallet-divination-common = { path = "../../divination/common", default-features = false }
pallet-bazi-chart = { path = "../../divination/bazi", default-features = false }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "pallet-divination-common/std",
    "pallet-bazi-chart/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
